--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -198,6 +198,8 @@ List of Acronyms
 \acro{EM}{Expectation-Maximization}
 \acro{EPI}{Echo Planar Imaging}
 \acro{fMRI}{Functional Magnetic Resonance Imaging}
+\acro{FMRIB}{Oxford Centre for Functional MRI of the Brain}
+\acro{FSL}{FMRIB Software Library}
 \acro{FWHM}{Full-Width Half-Maximum}
 \acro{GA}{Genetic Algorithms}
 \acro{GLM}{General Linear Model}
@@ -209,6 +211,7 @@ List of Acronyms
 \acro{O2Hb}{Oxygenated Hemoglobin}
 \acro{ODE}{Ordinary Differential Equation}
 \acro{PDF}{Probability Density Function}
+\acro{POSSUM}{Physics-Oriented Simulated Scanner for Understanding MRI}
 \acro{RF}{Radio Frequency}
 \acro{RMSE}{Root Mean Squared Error}
 \acro{RMSR}{Root Mean Squared Residual}
